# iot_devices

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  changes.md  host_demo.py  known_devices.md  pyproject.toml  rtl433_demo.py  setup.py  tui-dash.conf  tui-dash.py  tui-dash.toml  tui_demo2.py
doc_source/: conf.py  index.rst  subtypes.rst
docs/: README.md  subtypes.md
docs/device/: index.md
docs/host/: index.md
docs/iot_devices/: device.html  device.md  host.html  host.md  index.html  index.md
docs/iot_devices/datapoints/: index.md
docs/iot_devices/device/: index.md
docs/iot_devices/devices/: index.md
docs/iot_devices/devices/ArduinoCogsWebsocket/: index.md
docs/iot_devices/devices/ESPHomePlugin/: index.md
docs/iot_devices/devices/GPIODevice/: index.md
docs/iot_devices/devices/GPSDClient/: index.md
docs/iot_devices/devices/LazyMesh/: index.md
docs/iot_devices/devices/Matter/: index.md
docs/iot_devices/devices/WeatherPlugin/: index.md
docs/iot_devices/devices/Yeelight/: index.md
docs/iot_devices/devices/YoLink/: index.md
docs/iot_devices/devices/alarm/: index.md
docs/iot_devices/devices/demo/: index.md
docs/iot_devices/devices/servermonitor/: index.md
docs/iot_devices/devices/tester/: index.md
docs/iot_devices/host/: index.md
docs/iot_devices/host/host/: index.md
docs/iot_devices/host/simple_host/: index.md
docs/iot_devices/host/util/: index.md
docs/iot_devices/schema_editor/: index.md
docs/iot_devices/tui_dash/: index.md
docs/iot_devices/tui_dash/__main__/: index.md
docs/iot_devices/tui_dash/datapoint_controls/: index.md
docs/iot_devices/util/: index.md
iot_devices/: __init__.py  device.py  devices_manifest.json  host.py  iot_devices_scan.py  tui_dash.py  util.py
iot_devices/devices/ArduinoCogsWebsocket/: README.md  __init__.py
iot_devices/devices/ESPHomePlugin/: __init__.py
iot_devices/devices/GPIODevice/: __init__.py
iot_devices/devices/GPSDClient/: __init__.py
iot_devices/devices/LazyMesh/: __init__.py  crypto.py  demo.py  mesh.py  mesh_packet.py
iot_devices/devices/LazyMesh/transports/: __init__.py  ble.py  loopback.py  mqtt.py  udp.py
iot_devices/devices/NVRPlugin/: __init__.py
iot_devices/devices/RTL433/: __init__.py  manageform.html
iot_devices/devices/RokuRemoteApp/: __init__.py
iot_devices/devices/WeatherPlugin/: __init__.py
iot_devices/devices/Yeelight/: __init__.py
iot_devices/devices/YoLink/: __init__.py
iot_devices/devices/Zigbee2MQTTPlugin/: __init__.py
iot_devices/devices/alarm/: __init__.py
iot_devices/devices/demo/: __init__.py
iot_devices/devices/random/: __init__.py
iot_devices/devices/servermonitor/: __init__.py
src/iot_devices/: datapoints.py  device.py  devices_manifest.json  host.py  iot_devices_scan.py  schema_editor.py  util.py
src/iot_devices/devices/: tester.py
src/iot_devices/host/: __init__.py  host.py  simple_host.py  util.py
src/iot_devices/tui_dash/: __main__.py  datapoint_controls.py
tests/: conftest.py  debian_install_test_deps.sh  test_arduinocogs.py  test_demo_device.py  test_devices.py  test_esphome.py  test_server_monitor.py
tests/esphome_test/: test_server_conf.yaml
(+33 files in other folders)
