[project]
name = "iot-devices"
version = "0.25.0"
description = "Framework for creating and using device drives, and a library of devices."
authors = [{ name = "Daniel Dunn" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "paho-mqtt",
    "aiomqtt",
    "urwid",
    "scullery >=0.2.0",
    "yeelight",
    "colorzero",
    "gpiozero",
    "aioesphomeapi==42.7.0",
    "websockets ~=13.1",
    "niquests ~=3.9.1",
    "uvicorn ~=0.34.0",
    "starlette",
    "cryptography",
    "msgpack",
    "msgpack-types",
    "aiostream~=0.7.0",
    "bleak ~=1.0.1",
    "gpsdclient~=1.3.2",
]

[dependency-groups]
dev = [
    "coverage >=7.2.7",
    "pytest-asyncio >=0.23.7",
    "stamina>=25.1.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[project.scripts]
"tui-dash" = "iot_devices.tui_dash:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
