[project]
name = "iot-devices"
version = "0.25.0"
description = "Framework for creating and using device drives, and a library of devices."
authors = [{ name = "Daniel Dunn" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "textual",
    "scullery >=0.2.0",    
    "pydantic",
    "paho-mqtt",
    "yeelight",
    "colorzero",
    "gpiozero",
    "aioesphomeapi==42.7.0",
    "websockets ~=13.1",
    "niquests ~=3.9.1",
    "uvicorn ~=0.34.0",
    "starlette",
    "jsonschema",
    "cryptography",
    "msgpack",
    "msgpack-types",
    "aiostream~=0.7.0",
    "bleak ~=1.0.1",
    "gpsdclient~=1.3.2",
]

[dependency-groups]
dev = [
    "coverage >=7.2.7",
    "pytest-asyncio >=0.23.7",
    "stamina>=25.1.0",
    "sphinx-pyproject>=0.3.0",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-markdown-builder>=0.6.8",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[project.scripts]
"tui-dash" = "iot_devices.tui_dash:__main__"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
