[project]
name = "iot-devices"
version = "0.30.0"
description = "Framework for creating and using device drives, and a library of devices."
authors = [{ name = "Daniel Dunn" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "textual",
    "scullery >=0.4.0",    
    "pydantic",
    "paho-mqtt",
    "yeelight",
    "colorzero",
    "gpiozero",
    "aioesphomeapi==42.7.0",
    "websockets",
    "niquests",
    "uvicorn",
    "starlette",
    "jsonschema",
    "cryptography",
    "msgpack",
    "msgpack-types",
    "aiostream",
    "bleak",
    "gpsdclient",
]

[dependency-groups]
dev = [
    "coverage >=7.2.7",
    "pytest-asyncio >=0.23.7",
    "stamina>=25.1.0",
    "sphinx-pyproject>=0.3.0",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-markdown-builder>=0.6.8",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[project.scripts]
"tui-dash" = "iot_devices.tui_dash:__main__"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
